5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1811_2565.log
== TEST (2019-06-11 18:40:36) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	if(x>=5 and y>= (75/100*horas)
		a=a+1
	if(x<5)
		rn=rn+1
	if(x<5 and y<=(75/100*horas)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    a=a+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:40:59) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	if(x>=5 and y>= (75/100*horas)
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    a=a+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:00) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	if(x>=5 and y>= (75/100*horas)
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    a=a+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:21) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	if(x>=5 and y>= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 9
    if(x>=5 and y>= (75/100*horas):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:42) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y>= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y>= (75/100*horas):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:43) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y>= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y>= (75/100*horas):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:10) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y >= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y >= (75/100*horas):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:11) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y >= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y >= (75/100*horas):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:11) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y >= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y >= (75/100*horas):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:12) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>=5 and y >= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>=5 and y >= (75/100*horas):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:43:51) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y >= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>= 5 and y >= (75/100*horas):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:00) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 10
    if(x>= 5 and y>= (75/100*horas):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:20) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5)
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 12
    if(x<5)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:31) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(x<5 and y<=(75/100*horas)
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 15
    rf=rf+1
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:40) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(x<5 and y<=(75/100*horas):
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 14
    if(x<5 and y<=(75/100*horas):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:44:41) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(x<5 and y<=(75/100*horas):
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 14
    if(x<5 and y<=(75/100*horas):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:01) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100*horas):
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 14
    if(y<(75/100*horas):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:02) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100*horas):
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 14
    if(y<(75/100*horas):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:45:10) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:35) 
-- CODE:
from numpy import *
medias=array(eval(input("digite o vetor medias: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:47:38) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,frequencia):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:28) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
	  rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:01) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:49:08) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- EXECUTION TIME:
0.938988
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2565/main.py", line 10, in <module>
    if(x>= 5 and y>= (75/100)*horas):
NameError: name 'horas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:49:13) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- EXECUTION TIME:
2.70626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2565/main.py", line 10, in <module>
    if(x>= 5 and y>= (75/100)*horas):
NameError: name 'horas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:49:14) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- EXECUTION TIME:
2.24276
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1811/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:17) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:52:17) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=int(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 4
    carga=int(input()))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:52:18) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=int(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
File "XXXX", line 4
    carga=int(input()))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:52:45) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=array(eval(input("digites a carga horaria: ")))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:53:16) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=int(input("digites a carga horaria: "))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*horas):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*horas):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:54:47) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=int(input("digites a carga horaria: "))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*carga):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*carga):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:55:11) 
-- CODE:
from numpy import *
mf=array(eval(input("digite o vetor: ")))
pres=array(eval(input("digite as frequencias: ")))
carga=int(input("digites a carga horaria: "))
a=0
rn=0
rf=0
for x,y in zip(mf,pres):
	
	if(x>= 5 and y>= (75/100)*carga):
		a=a+1
	if(x<5):
		rn=rn+1
	if(y<(75/100)*carga):
		rf=rf+1
z=zeros(3,dtype=int)
z[0]=a
z[1]=rn
z[2]=rf
print(z)
		


-- EXECUTION TIME:
1.14242
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
